[package]
name = "containertyrant"
version = "0.1.0"
edition = "2021"
description = "Rule your Docker containers with an iron fist"
authors = ["Zac"]
license = "MIT"
repository = "https://github.com/zac/containertyrant"

[dependencies]
tokio = { version = "1", features = ["full"] }
bollard = "0.16"
iced = { version = "0.12", features = ["tokio", "image", "svg", "wgpu"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
toml = "0.8"
thiserror = "1"
anyhow = "1"
futures = "0.3"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "containertyrant"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
